--- a/src/utils/projects.json
+++ b/src/utils/projects.json
@@ -3,14 +3,14 @@
         "id": 1,
         "nombreP": "Amazing Events",
         "descripcionP": "Proyecto desarrollado con HTML, CSS y JS",
-        "imgP": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyASRNVx4fl32m4J1lBQzLiDCWf5p7Cb4kcxfufhBb6X7Mo207nm5-o0dNan2UoyqV_j0&usqp=CAU",
+        "imgP": "./amazing.png",
         "fechaP": "Abril 2023",
         "linkP": "https://debiabril.github.io/AmazingEvents_BADOSA/index.html "
     },
     {
         "id": 2,
         "nombreP": "Portfolio Editable",
-        "descripcionP": "Portfolio editable desde el front end",
+        "descripcionP": "Portfolio editable desde el front end, desarrollado con Angular, Java y MySQL",
         "imgP": "https://www.seekpng.com/png/detail/111-1112824_picture-my-portfolio-logo-png.png ",
         "fechaP": "Abril 2023",
         "linkP": "https://dabfrontend-c7e01.web.app"
