--- a/src/utils/projects.json
+++ b/src/utils/projects.json
@@ -3,22 +3,22 @@
         "id": 6,
         "nombreP": "Mytinerary",  
         "descripcionP": "Proyecto desarrollado con MERN (Mongo, Express, React y Node.js). ",
-        "imgP": "https://guias.donweb.com/wp-content/uploads/2022/03/como-instalar-el-stack-mern-mongodb-express-react-y-node-en-ubuntu-20-04.jpg",
+        "imgP": "https://thumbs2.imgbox.com/6c/35/WiCgj8un_t.png",
         "fechaP": "Agosto-Septiembre 2023",
         "linkP": "https://debiabril.github.io/mytinerary-deboraBadosa/#/"
     },{
         "id": 3,
         "nombreP": "Página de ADN Soluciones Web",
         "descripcionP": "Nos encontramos desarrollandola para mudarla a React.",
-        "imgP": "https://pps.whatsapp.net/v/t61.24694-24/355662756_991350965331492_6773008176244446553_n.jpg?ccb=11-4&oh=01_AdRi1YW6Ap2_OZBdSy5wGolZzRDO4-AJ1BBOidIUtqwr1g&oe=65198660&_nc_sid=000000&_nc_cat=110",
+        "imgP": "https://thumbs2.imgbox.com/d0/6c/2Fp1Uehr_t.png",
         "fechaP": "Mayo 2023",
         "linkP": "https://adnwebsolutions.github.io/ADN-Solutions/"
     },
     {
         "id": 4,
         "nombreP": "EcoAmbiental Desinfecciones",
-        "descripcionP": "Primer cliente de ADN, estamos mudando la página a react, y nosotros la hosteamos y nos encargamos del mantenimiento de la misma y las modificaciones",
-        "imgP": "https://www.ecoambientaldesinfecciones.com.ar/img/logo.svg",
+        "descripcionP": "Primer cliente de ADN, estamos migrando la página a react, y nosotros la hosteamos y nos encargamos del mantenimiento de la misma y las modificaciones",
+        "imgP": "https://thumbs2.imgbox.com/a6/d3/v6kFaxkY_t.png",
         "fechaP": "Junio 2023",
         "linkP": "https://www.ecoambientaldesinfecciones.com.ar/"
     },
@@ -27,14 +27,14 @@
         "id": 5,   
         "nombreP": "Ozónica",
         "descripcionP": "Segundo cliente, antes de que comenzemos el curso de MERN, se encuentra en desarrollo por tiempos del cliente",
-        "imgP": "https://adnwebsolutions.github.io/ozonica/assets/logo.png",
+        "imgP": "https://thumbs2.imgbox.com/40/7c/pP7bftvk_t.png",
         "fechaP": "Julio 2023",
         "linkP": "https://adnwebsolutions.github.io/ozonica/"
     },{
         "id": 1,
         "nombreP": "Amazing Events",
         "descripcionP": "Proyecto desarrollado con HTML, CSS y JS",
-        "imgP": "https://img.freepik.com/free-photo/amazing-beautiful-sky-with-clouds_58702-5816.jpg",
+        "imgP": "https://thumbs2.imgbox.com/50/c3/T2C4QpUj_t.png",
         "fechaP": "Marzo-Abril 2023",
         "linkP": "https://debiabril.github.io/AmazingEvents_BADOSA/index.html "
     },
