img problema resuelto

--- a/src/utils/projects.json
+++ b/src/utils/projects.json
@@ -3,7 +3,7 @@
         "id": 10,
         "nombreP": "Encriptador con JS",  
         "descripcionP": "Siguiendo las reglas de ingreso de texto, se puede introducir el texto que se desee y el mismo será encriptado y se podrá copiar el mismo y pegar en el recuadro correspondiente para ser desencriptado",
-        "imgP": "https://imgbox.com/wB96I0hG",
+        "imgP": "https://thumbs2.imgbox.com/3a/45/wB96I0hG_t.png",
         "fechaP": "Agosto 2024",
         "linkP": "https://debiabril.github.io/encriptador/"
     },{
